fix: fix z-index

--- a/client/src/styles/components/advantages.scss
+++ b/client/src/styles/components/advantages.scss
@@ -12,7 +12,6 @@
 .advantage {
     width: 369px;
     height: 124px;
-    z-index: 100;
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.4);
     backdrop-filter: blur(15px);
@@ -33,6 +32,7 @@
 
 .advantages__grass {
     position: absolute;
+    z-index: -1;
     display: block;
     left: 50%;
     transform: translate(-50%, 0);
